--- a/ProjetoFinal2/power_factor.ipynb
+++ b/ProjetoFinal2/power_factor.ipynb
@@ -16,7 +16,7 @@
     "from datetime import datetime\n",
     "\n",
     "\n",
-    "cliente = boto3.client('kinesis', aws_access_key_id='AKIAW76TPVRJBKG24RJ7', aws_secret_access_key='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',\n",
+    "cliente = boto3.client('kinesis', aws_access_key_id='???????', aws_secret_access_key='???????',\n",
     "                        region_name='sa-east-1')\n",
     "\n",
     "id = 0\n",
